Fixed top margin on copyright notice on narrow screens

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1190,7 +1190,6 @@ main
     }
 
     .site-footer {
-        margin-top: 6rem;
         font-size: 1.1rem;
     }
 
